Add comprehensive setup with JARs and documentation
- Added QUICK-START.md with step-by-step instructions
- Updated README.md with simplified setup process
- Added all 9 required JAR files (3.8MB) for easy distribution
- Created automated scripts: compile.sh, download-dependencies.sh
- Updated run scripts to use JAR-based approach (no Maven required)
- Modified .gitignore to include lib/*.jar files
- Complete ready-to-use package for end users

--- a/.gitignore
+++ b/.gitignore
@@ -10,8 +10,9 @@
 # Mobile Tools for Java (J2ME)
 .mtj.tmp/
 
-# Package Files
+# Package Files (exclude lib/ directory JARs for easy distribution)
 *.jar
+!lib/*.jar
 *.war
 *.nar
 *.ear
